<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bly01854.idlerunner.MainActivity">

    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="TextView"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:background="@drawable/dark_border"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/tv_stepTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/nestedScrollView"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="16dp"
            android:text="Upgrades"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498" />

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="320dp"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/upgradeGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/runningShoes"
                    android:layout_width="225dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/runningShoes"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/help_shoes"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:background="@android:drawable/ic_menu_help" />

                <Button
                    android:id="@+id/running_shoes_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:onClick="upgradeShoes"
                    android:text="@string/buy" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/upgradeGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/energyDrink"
                    android:layout_width="225dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/energyDrink"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/help_drink"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:background="@android:drawable/ic_menu_help" />

                <Button
                    android:id="@+id/energy_drink_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="upgradeEnergyDrink"
                    android:text="@string/buy" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/upgradeGroup3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/joggers"
                    android:layout_width="225dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/joggers"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/help_joggers"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:background="@android:drawable/ic_menu_help" />

                <Button
                    android:id="@+id/joggers_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:onClick="upgradeJoggers"
                    android:text="@string/buy" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/upgradeGroup4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/breeze"
                    android:layout_width="225dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/coolBreeze"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/help_breeze"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:background="@android:drawable/ic_menu_help" />

                <Button
                    android:id="@+id/breeze_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:onClick="upgradeCoolBreeze"
                    android:text="@string/buy" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/upgradeGroup5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/upgradeText5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/upgrade"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/upgradeButton5"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/buy" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/upgradeGroup6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/upgradeText6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/upgrade"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/upgradeButton6"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/buy" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/upgradeGroup7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/upgradeText7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="@string/upgrade"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/upgradeButton7"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/buy" />
            </LinearLayout>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <ImageView
        android:id="@+id/ivRunningMan"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_above="@+id/activate_energy"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/activate_energy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout"
        android:layout_marginBottom="46dp"
        android:layout_toStartOf="@+id/tv_steps"
        android:enabled="false"
        android:onClick="activateEnergyDrink"
        android:text="Energy Drink" />
</RelativeLayout>
